--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <base href="/" />
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="/public/favicon.ico" />
     <meta
