--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,6 +4,10 @@
     <base href="/" />
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="/public/favicon.ico" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
